--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,9 @@ channels:
   - conda-forge
   - defaults
 dependancies:
-  - python==2.7
+  - python=2.7
   - pyferret
   - pandas
   - numpy
   - pip:
-        - ferretmagic==2016.10.28 
+        - ferretmagic=2016.10.28 
