--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ channels:
         - conda-forge
         - defaults
 dependencies:
+        - python=2.7
         - ferret_datasets
         - pyferret
         - pandas
