--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
         - defaults
 dependencies:
         - python=2.7
+        - cairo
         - ferret_datasets
         - pyferret
         - pandas
