--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -22,8 +22,8 @@ USER root
 WORKDIR /opt
 RUN wget https://github.com/NOAA-PMEL/PyFerret/releases/download/v7.3/pyferret-7.3-RHEL7-64.tar.gz && \
     tar xvfz pyferret-7.3-RHEL7-64.tar.gz
-#RUN wget ftp://ftp.pmel.noaa.gov/ferret/pub/data/fer_dsets.tar.gz && \
-#    tar xvfz fer_dsets.tar.gz
+RUN git clone https://github.com/NOAA-PMEL/FerretDatasets && \
+    mv FerretDatasets fer_dsets
 
 #====================================================================================
 # fast installation
@@ -33,9 +33,14 @@ WORKDIR /opt
 RUN git clone https://github.com/PBrockmann/fast
 
 #====================================================================================
+ENV FER_DIR=/opt/pyferret-7.3-RHEL7-64
+ENV FER_PALETTE=${HOME} /opt/pyferret-7.3-RHEL7-64/ppl /opt/fast
+
+#====================================================================================
 # Make sure the contents of our repo are in ${HOME}
 COPY . ${HOME}
 USER root
 RUN chown -R ${NB_UID} ${HOME}
 USER ${NB_USER}
 
+WORKDIR ${HOME}
