--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -36,7 +36,7 @@ RUN git clone https://github.com/PBrockmann/fast
 ENV FER_DIR=/opt/pyferret-7.3-RHEL7-64
 ENV FER_DSETS=/opt/fer_dsets
 
-ENV PYTHONPATH=${FER_DIR}/lib/python2.7/site-packages
+ENV PYTHONPATH=${FER_DIR}/lib/python2.7/site-packages:${PYTHONPATH}
 ENV LD_LIBRARY_PATH=${FER_DIR}/lib/python2.7/site-packages/pyferret
 
 ENV FER_DATA=.:${FER_DSETS}/data:${FER_DIR}/contrib:/opt/fast
