--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -1,11 +1,11 @@
 
 #====================================================================================
-FROM yuxiaorui/python-2.7-slim
+FROM python:2.7.14-stretch
 
 #====================================================================================
 RUN pip install --no-cache-dir notebook==5.*
 RUN apt-get update && apt-get -y install wget git
-RUN apt-get update && apt-get -y install libfreetype6 libfontconfig
+#RUN apt-get update && apt-get -y install libfreetype6 libfontconfig libpng
 
 #====================================================================================
 ENV NB_USER agentk
