fix fer env variables

--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -58,11 +58,11 @@ ENV FER_DSETS="/opt/fer_dsets"
 ENV PYTHONPATH="${FER_DIR}/lib/python2.7/site-packages:${PYTHONPATH}"
 ENV LD_LIBRARY_PATH="${FER_DIR}/lib/python2.7/site-packages/pyferret:${LD_LIBRARY_PATH}"
 
-ENV FER_DATA=".:${FER_DSETS}/data:${FER_DIR}/contrib:/opt/fast"
-ENV FER_DESCR=".:${FER_DSETS}/descr"
-ENV FER_GRIDS=".:${FER_DSETS}/grids"
-ENV FER_GO=".:${FER_DIR}/go:${FER_DIR}/examples:${FER_DIR}/contrib:/opt/fast"
-ENV FER_PALETTE=".:/${FER_DIR}/ppl:/opt/fast"
+ENV FER_DATA=". ${FER_DSETS}/data ${FER_DIR}/contrib /opt/fast"
+ENV FER_DESCR=". ${FER_DSETS}/descr"
+ENV FER_GRIDS=". ${FER_DSETS}/grids"
+ENV FER_GO=". ${FER_DIR}/go ${FER_DIR}/examples ${FER_DIR}/contrib /opt/fast"
+ENV FER_PALETTE=". /${FER_DIR}/ppl /opt/fast"
 ENV FER_FONTS="${FER_DIR}/ppl/fonts"
 ENV PYFER_EXTERNAL_FUNCTIONS="${FER_DIR}/ext_func/pylibs"
 
