--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -1,15 +1,21 @@
 
 #====================================================================================
+LABEL maintainer="Patrick.Brockmann@lsce.ipsl.fr"
+
+#====================================================================================
 FROM python:2.7.14-stretch
 
 #====================================================================================
 RUN apt-get update && apt-get -y install wget git
 RUN apt-get update && apt-get -y install libgfortran3
+RUN apt-get update && apt-get -y install r-base
 
 RUN pip install --no-cache-dir notebook==5.*
-RUN pip install numpy pandas
+RUN pip install numpy pandas bokeh
+RUN pip install ipywidgets
 RUN pip install randomcolor
 RUN pip install ferretmagic==2016.10.28
+RUN pip install rpy2
 
 #====================================================================================
 ENV NB_USER agentk
