--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -11,7 +11,7 @@ LABEL ref2="https://github.com/NOAA-PMEL/PyFerret"
 
 #====================================================================================
 RUN apt-get update && apt-get -y install wget git
-RUN apt-get update && apt-get -y install libgfortran3
+#RUN apt-get update && apt-get -y install libgfortran3
 RUN apt-get update && apt-get -y install r-base
 
 RUN pip install --no-cache-dir notebook==6.0.0
