--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -1,5 +1,5 @@
 #====================================================================================
-FROM python:3.6
+FROM continuumio/anaconda3
 
 #====================================================================================
 LABEL maintainer="Patrick.Brockmann@lsce.ipsl.fr"
