--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -10,6 +10,9 @@ LABEL ref1="http://ferret.pmel.noaa.gov/Ferret/"
 LABEL ref2="https://github.com/NOAA-PMEL/PyFerret"
 
 #====================================================================================
+RUN apt-get -y update
+
+#====================================================================================
 ENV NB_USER agentk
 ENV NB_UID 1000
 ENV HOME /home/${NB_USER}
