--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -32,7 +32,7 @@ RUN pip install --no-cache-dir notebook==6.*
 RUN pip install numpy pandas bokeh
 RUN pip install randomcolor
 RUN pip install ferretmagic
-RUN pip install rpy2
+#RUN pip install rpy2
 
 RUN pip install ipywidgets
 RUN jupyter nbextension enable --py widgetsnbextension --sys-prefix
