--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -28,7 +28,7 @@ USER root
 
 RUN conda create -n FERRET -c conda-forge pyferret ferret_datasets --yes
 #RUN echo "source activate FERRET" > ~/.bashrc
-RUN /bin/bash -c "source activate FERRET"
+RUN /bin/bash -c "conda activate FERRET"
 
 RUN conda install -c r rpy2
 RUN pip install --no-cache-dir notebook==6.*
