--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -27,8 +27,7 @@ RUN adduser --disabled-password \
 USER root
 
 RUN conda create -n FERRET -c conda-forge pyferret ferret_datasets --yes
-#RUN echo "source activate FERRET" > ~/.bashrc
-RUN /bin/bash -c "conda activate FERRET"
+RUN echo "source activate FERRET" >> ~/.bashrc
 
 RUN conda install -c r rpy2
 RUN pip install --no-cache-dir notebook==6.*
