--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -5,12 +5,15 @@ channels:
 dependencies:
   - python=3.7
   - jupyter
+  - notebook
   - numpy
   - pandas
   - bokeh
   - pyferret
+  - ferret_datasets
   - rpy2
   - pip
   - pip:
+    - ipywidgets
     - randomcolor
     - ferretmagic
