--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -14,6 +14,6 @@ dependencies:
   - rpy2=3.1.0
   - pip=19.3.1
   - pip:
-    - ipywidgets=7.5.1
-    - randomcolor=0.4.4.5
-    - ferretmagic=20181001
+    - ipywidgets==7.5.1
+    - randomcolor==0.4.4.5
+    - ferretmagic==20181001
